--- a/landing_page.css
+++ b/landing_page.css
@@ -2,3 +2,24 @@
 /**
 
 */
+
+.center {
+  margin-left: auto;
+  margin-right: auto;
+  width: 40%;
+}
+
+.center2 {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.name_n_image {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    opacity: 0;
+    padding-top: 50px;
+}
